--- a/LabEnvironment/http/kickstart/centos-ks.cfg
+++ b/LabEnvironment/http/kickstart/centos-ks.cfg
@@ -24,9 +24,8 @@ zerombr
 clearpart --all --initlabel
 autopart --type=plain --fstype xfs --nohome
 
-# Reboot after installation
-reboot --eject
+poweroff --eject
 
-%packages --ignoremissing
+%packages 
 @core
 %end
