Updated PXE-based boot doc and kickstart

--- a/LabEnvironment/http/kickstart/centos-ks.cfg
+++ b/LabEnvironment/http/kickstart/centos-ks.cfg
@@ -29,3 +29,8 @@ poweroff --eject
 %packages 
 @core
 %end
+
+%post --interpreter=/usr/bin/bash --log=/root/ks-post.log
+yum -y update --security
+yum -y update
+%end
