Working through Ansible config

--- a/LabEnvironment/http/kickstart/centos-ks.cfg
+++ b/LabEnvironment/http/kickstart/centos-ks.cfg
@@ -16,8 +16,8 @@ services --enabled=sshd
 skipx
 
 # To generate password use: openssl passwd -1 -salt abc yourpass
-rootpw --iscrypted \$1\$20180128\$a7sSobbSJnk.83KQLSn8K. --lock
-user --name=ansible --groups=wheel --uid=5001 --gid=5001 --password=\$1\$20180128\$LV5K9xI6sdpxni8py2ty.1 --iscrypted
+rootpw --iscrypted \$1\$20180128\$4iOlta.LyZKR3KgtTHNKX/ --lock
+user --name=ansible --groups=wheel --uid=5001 --gid=5001 --password=\$1\$20180128\$WVHPLZo1t0ATiyTZbIGNp1 --iscrypted
 
 bootloader --location=mbr
 zerombr
@@ -30,7 +30,6 @@ poweroff --eject
 @core
 %end
 
-%post --interpreter=/usr/bin/bash --log=/root/ks-post.log
-yum -y update --security
-yum -y update
+%post 
+
 %end
