--- a/LabEnvironment/ansible-hosts.yml
+++ b/LabEnvironment/ansible-hosts.yml
@@ -1,9 +1,16 @@
+---
 all:
   vars:
     ansible_user: ansible
+    ansible_become: yes
     ansible_ssh_private_key_file: ~/.ssh/ansible
+    ansible_ssh_public_key_file: ~/.ssh/ansible.pub
+    
   hosts:
-    bastion:
-      ansible_host: 127.0.0.1
-      ansible_port: 2222
-      roles:
+    router:
+      ansible_host: 192.168.200.10
+
+  # children:
+    # web-servers: 
+      # hosts:
+        
