Updates as I work through the router config

--- a/LabEnvironment/roles/base-server/handlers/main.yml
+++ b/LabEnvironment/roles/base-server/handlers/main.yml
@@ -3,3 +3,18 @@
   service:
     name: sshd
     state: restarted
+
+- name: restart fail2ban
+  service:
+    name: fail2ban
+    state: restarted
+
+- name: restart chronyd
+  service:
+    name: chronyd
+    state: restarted
+
+- name: restart firewalld
+  service:
+    name: firewalld
+    state: restarted
