--- a/LabEnvironment/roles/base-server/tasks/packages.yml
+++ b/LabEnvironment/roles/base-server/tasks/packages.yml
@@ -5,9 +5,9 @@
 - name: Make sure we have the packages we need
   yum: name={{ item }} state=present
   with_items:
-    - openssh-server
-    - fail2ban
     - bash-completion
+    - net-tools
+    - nmap
 
 - name: Remove packages we do not need
   yum: name={{ item }} state=removed
