--- a/LabEnvironment/roles/base-server/tasks/sshd.yml
+++ b/LabEnvironment/roles/base-server/tasks/sshd.yml
@@ -1,4 +1,15 @@
 ---
+- name: Make sure SSH server is installed
+  yum:
+    name: openssh-server
+    state: present
+
+- name: Ensure sshd service is enabled and running
+  service:
+    name: sshd
+    enabled: yes
+    state: started
+
 - name: Copy over the SSHD configuration
   copy:
     src: "{{ role_path }}/files/etc/ssh/sshd_config"
