--- a/LabEnvironment/roles/router/tasks/main.yml
+++ b/LabEnvironment/roles/router/tasks/main.yml
@@ -3,3 +3,14 @@
   yum: name={{ item }} state=present
   with_items:
     - dnsmasq
+    - squid
+  
+
+- name: Start and enable the required service
+  service:
+    name: "{{ item }}"
+    state: started
+    enabled: yes
+  with_items:
+    - dnsmasq
+    - squid
