--- a/LabEnvironment/site.yml
+++ b/LabEnvironment/site.yml
@@ -1,8 +1,11 @@
 ---
 - hosts: all
   roles:
-  - base-server
+    - base-server
 
 - hosts: router
-  roles:
-  - router
+  tasks:
+    - hostname:
+        name: router.lab.example.com
+    - import_role:
+        name: router
