--- a/LabEnvironment/vbox/http/kickstart/centos-ks-router.cfg
+++ b/LabEnvironment/vbox/http/kickstart/centos-ks-router.cfg
@@ -10,10 +10,13 @@ network --device eth0 --onboot yes --bootproto dhcp
 # The Hostonly network
 network --device eth1 --onboot yes --bootproto static --ip=192.168.200.10 --netmask=255.255.255.0 
 
+# The bridged network
+network --device eth2 --onboot yes --bootproto dhcp
+
 # This is the Internal network
-network --device eth2 --onboot yes --bootproto static --ip=172.16.1.1 --netmask=255.255.255.0
-network --device eth3 --onboot yes --bootproto static --ip=172.16.100.1 --netmask=255.255.255.0
-network --device eth4 --onboot yes --bootproto static --ip=172.16.200.1 --netmask=255.255.255.0
+network --device eth3 --onboot yes --bootproto static --ip=172.16.1.1 --netmask=255.255.255.0
+network --device eth4 --onboot yes --bootproto static --ip=172.16.100.1 --netmask=255.255.255.0
+network --device eth5 --onboot yes --bootproto static --ip=172.16.200.1 --netmask=255.255.255.0
 
 firewall --enabled --ssh --trust=eth1
 authconfig --enableshadow --enablemd5
@@ -23,8 +26,8 @@ services --enabled=sshd
 skipx
 
 # To generate password use: openssl passwd -1 -salt abc yourpass
-rootpw --iscrypted \$1\$20180128\$4iOlta.LyZKR3KgtTHNKX/ --lock
-user --name=ansible --groups=wheel --uid=5001 --gid=5001 --password=\$1\$20180128\$WVHPLZo1t0ATiyTZbIGNp1 --iscrypted
+rootpw --iscrypted $1$20180211$0RqjWNOcVBVEYU6ZHFnYw0 --lock
+user --name=ansible --groups=wheel --uid=5001 --gid=5001 --password=\$1\$20180211\$V9GKgSEHwwfFjbHChj1UZ. --iscrypted
 
 bootloader --location=mbr
 zerombr
