Updated with lab provisioning fixes, update notes

--- a/LabEnvironment/ansible/roles/base-server/handlers/main.yml
+++ b/LabEnvironment/ansible/roles/base-server/handlers/main.yml
@@ -18,3 +18,8 @@
   service:
     name: firewalld
     state: restarted
+
+- name: reload firewalld
+  service:
+    name: firewalld
+    state: reloaded
