--- a/.gitignore
+++ b/.gitignore
@@ -4,4 +4,4 @@
 **/.tmp*/
 ansible.log
 webserver.log
-LabEnvironment/vbox/http/kickstart/centos-ks-router.cfg
+LabEnvironment/vbox/http/kickstart/*.cfg
