--- a/LabEnvironment/ansible/roles/base-server/tasks/main.yml
+++ b/LabEnvironment/ansible/roles/base-server/tasks/main.yml
@@ -1,4 +1,5 @@
 ---
+- import_tasks: firewall.yml
 - import_tasks: users.yml
 - import_tasks: users-ansible.yml
 - import_tasks: packages.yml
@@ -7,5 +8,3 @@
 - import_tasks: chrony.yml
 - import_tasks: sysstat.yml
 - import_tasks: logrotate.yml
-#- import_tasks: firewall.yml
-
