--- a/LabEnvironment/ansible/roles/router/tasks/main.yml
+++ b/LabEnvironment/ansible/roles/router/tasks/main.yml
@@ -1,16 +1,3 @@
----
-- name: Make sure we have the packages we need
-  yum: name={{ item }} state=present
-  with_items:
-    - dnsmasq
-    - squid
-  
-
-- name: Start and enable the required service
-  service:
-    name: "{{ item }}"
-    state: started
-    enabled: yes
-  with_items:
-    - dnsmasq
-    - squid
+--- 
+- import_tasks: squid.yml
+- import_tasks: dnsmasq.yml
