--- a/LabEnvironment/ansible/roles/router/handlers/main.yml
+++ b/LabEnvironment/ansible/roles/router/handlers/main.yml
@@ -20,9 +20,7 @@
     state: restarted
 
 - name: reload firewalld
-  service:
-    name: firewalld
-    state: reloaded
+  command: firewall-cmd --reload
 
 - name: restart squid
   service:
