--- a/LabEnvironment/ansible/roles/router/tasks/main.yml
+++ b/LabEnvironment/ansible/roles/router/tasks/main.yml
@@ -1,3 +1,5 @@
 --- 
+#- import_tasks: network.yml
+- import_tasks: firewall.yml
+- import_tasks: time.yml
 - import_tasks: squid.yml
-- import_tasks: dnsmasq.yml
