Setup PXE Boot config

--- a/LabEnvironment/ansible/roles/dhcp-server/files/etc/dhcp/dhcpd.conf
+++ b/LabEnvironment/ansible/roles/dhcp-server/files/etc/dhcp/dhcpd.conf
@@ -37,6 +37,8 @@ shared-network lab {
   option domain-name-servers 172.16.1.1;
   option time-servers 172.16.1.1;
   #option auto-proxy-config code 252 = " http://mywebserver/proxy.pac";
+  next-server 172.16.1.1;
+  filename "pxelinux.0";
 
 # The Internal subnet
   subnet 172.16.1.0 netmask 255.255.255.0 {
