DNS - fix peerdns

--- a/LabEnvironment/ansible/roles/dns-server/files/etc/named.conf
+++ b/LabEnvironment/ansible/roles/dns-server/files/etc/named.conf
@@ -10,13 +10,13 @@
 // configuration located in /usr/share/doc/bind-{version}/Bv9ARM.html
 
 options {
-	listen-on port 53 { 172.16.1.1; };
+	listen-on port 53 { 172.16.1.1; 127.0.0.1; };
 	listen-on-v6 port 53 { ::1; };
 	directory 	"/var/named";
 	dump-file 	"/var/named/data/cache_dump.db";
 	statistics-file "/var/named/data/named_stats.txt";
 	memstatistics-file "/var/named/data/named_mem_stats.txt";
-	allow-query     { 172.16.0.0/16; };
+	allow-query     { 172.16.0.0/16; 127.0.0.1; };
 
 	/* 
 	 - If you are building an AUTHORITATIVE DNS server, do NOT enable recursion.
