PXE network install now working but need to look at reducing the memory req down from 2GB

--- a/LabEnvironment/ansible/roles/base-server/tasks/main.yml
+++ b/LabEnvironment/ansible/roles/base-server/tasks/main.yml
@@ -1,4 +1,6 @@
 ---
+- import_role: 
+    name: proxied-yum
 - import_tasks: firewall.yml
 - import_tasks: users.yml
 - import_tasks: users-ansible.yml
