--- a/LabEnvironment/ansible/roles/base-server/tasks/packages.yml
+++ b/LabEnvironment/ansible/roles/base-server/tasks/packages.yml
@@ -1,6 +1,6 @@
 ---
-- name: Configure the EPEL repo
-  yum: name=epel-release state=present
+#- name: Configure the EPEL repo
+#  yum: name=epel-release state=present
   
 - name: Make sure we have the packages we need
   yum: name={{ item }} state=present
