--- a/LabEnvironment/ansible/roles/dhcp-server/files/etc/dhcp/dhcpd.conf
+++ b/LabEnvironment/ansible/roles/dhcp-server/files/etc/dhcp/dhcpd.conf
@@ -4,6 +4,8 @@
 option domain-name "lab.example.com";
 option domain-name-servers ns.lab.example.org;
 
+option auto-proxy-config code 252 = text;
+
 default-lease-time 600;
 max-lease-time 7200;
 
@@ -36,13 +38,13 @@ shared-network lab {
   option domain-search "lab.example.com";
   option domain-name-servers 172.16.1.1;
   option time-servers 172.16.1.1;
-  #option auto-proxy-config code 252 = " http://mywebserver/proxy.pac";
   next-server 172.16.1.1;
   filename "pxelinux.0";
 
 # The Internal subnet
   subnet 172.16.1.0 netmask 255.255.255.0 {
     range 172.16.1.100 172.16.1.199;
+    option auto-proxy-config " http://proxy.lab.example.com/proxy/proxy.pac";
   }
 
   # The DMZ subnet
