--- a/LabEnvironment/ansible/roles/router/files/etc/squid/squid.conf
+++ b/LabEnvironment/ansible/roles/router/files/etc/squid/squid.conf
@@ -21,7 +21,7 @@ http_access deny manager
 # We strongly recommend the following be uncommented to protect innocent
 # web applications running on the proxy server who think the only
 # one who can access services on "localhost" is a local user
-#http_access deny to_localhost
+http_access deny to_localhost
 
 #
 # INSERT YOUR OWN RULE(S) HERE TO ALLOW ACCESS FROM YOUR CLIENTS
@@ -37,7 +37,7 @@ http_access allow localhost
 http_access deny all
 
 # Squid normally listens to port 3128
-http_port 3128
+# http_port 3128
 
 # Uncomment and adjust the following to add a disk cache directory.
 #cache_dir ufs /var/spool/squid 100 16 256
@@ -60,12 +60,10 @@ refresh_pattern .		0	20%	4320
 # 'defaultsite' sets the hostname that will be used if none is provided
 # 'vhost' tells squid that it'll use name-based virtual hosting. I'm not
 #   sure if this is actually needed.
-http_port 80 accel defaultsite=mirror.lowell.lan vhost
+http_port 3128 accel defaultsite=mirror.lab.example.com vhost
 
-# Create a disk-based cache of up to 10GB in size:
-# (10000 is the size in MB. 16 and 256 seem to set how many subdirectories
-#  are created, and are default values.)
-cache_dir ufs /var/spool/squid 10000 16 256
+# Create a disk-based cache of up to 8GB in size:
+cache_dir ufs /var/spool/squid 8000 16 256
 
 # Use the LFUDA cache eviction policy -- Least Frequently Used, with
 #  Dynamic Aging. http://www.squid-cache.org/Doc/config/cache_replacement_policy/
@@ -86,10 +84,6 @@ cache_replacement_policy heap LFUDA
 # You will probably want to tune this part.
 refresh_pattern -i .rpm$ 129600 100% 129600 refresh-ims override-expire
 refresh_pattern -i .iso$ 129600 100% 129600 refresh-ims override-expire
-refresh_pattern ^ftp:           1440    20%     10080
-refresh_pattern ^gopher:        1440    0%      1440
-refresh_pattern -i (/cgi-bin/|\?) 0     0%      0
-refresh_pattern .               0       20%     4320
 
 # This is OH SO IMPORTANT: squid defaults to not caching objects over
 # 4MB, which may be a reasonable default, but is awful behavior on our
@@ -118,9 +112,5 @@ maximum_object_size 4096 MB
 #  route the request to mirror.aarnet.edu.au and cache the result.
 
 cache_peer mirror.aarnet.edu.au parent 80 0 no-query originserver name=aarnet
-cache_peer_domain aarnet centos.lab.example.com 
+cache_peer_domain aarnet centos-mirror.lab.example.com 
 
-# Configure /etc/yum.repos.d/
-
-# Configure /etc/hosts
-# <ip> centos.lab.example.com
