--- a/LabEnvironment/ansible/ansible.cfg
+++ b/LabEnvironment/ansible/ansible.cfg
@@ -1,3 +1,7 @@
 [defaults] 
 inventory = ansible-hosts.yml
 log_path = ansible.log
+
+[ssh_connection]
+ssh_args = -F ssh.cfg
+control_path = ~/.ssh/mux-%r@%h:%p
