Squid should yun on a proxy port

--- a/LabEnvironment/ansible/roles/router/tasks/squid.yml
+++ b/LabEnvironment/ansible/roles/router/tasks/squid.yml
@@ -24,7 +24,7 @@
 
 - name: Configure the Firewall for Squid
   firewalld:
-    service: http
+    service: squid
     permanent: yes
     immediate: yes
     zone: lab-internal
