--- a/LabEnvironment/ansible/roles/dhcp-server/files/etc/dhcp/dhcpd.conf
+++ b/LabEnvironment/ansible/roles/dhcp-server/files/etc/dhcp/dhcpd.conf
@@ -33,7 +33,6 @@ subnet 192.168.200.0 netmask 255.255.255.0 {
 }
 
 shared-network lab {
-  option routers 172.16.1.1;
   option subnet-mask 255.255.255.0;
   option domain-search "lab.example.com";
   option domain-name-servers 172.16.1.1;
@@ -43,26 +42,41 @@ shared-network lab {
 
 # The Internal subnet
   subnet 172.16.1.0 netmask 255.255.255.0 {
+    option routers 172.16.1.1;
     range 172.16.1.100 172.16.1.199;
-    option auto-proxy-config " http://proxy.lab.example.com/proxy/proxy.pac";
+    #option auto-proxy-config " http://proxy.lab.example.com/proxy/proxy.pac";
+
+    host canary {
+     option host-name "canaryinternal.lab.example.com";
+     hardware ethernet 08:00:27:c7:13:9e;
+     fixed-address 172.16.1.50;
+    }
   }
 
   # The DMZ subnet
   subnet 172.16.100.0 netmask 255.255.255.0 {
+    option routers 172.16.100.1;
     range 172.16.100.100 172.16.100.199;
+
+    host canary2 {
+     option host-name "canarydmz.lab.example.com";
+     hardware ethernet 08:00:27:B2:6B:D0;
+     fixed-address 172.16.100.50;
+    }
   }
 
   # The External subnet
   subnet 172.16.200.0 netmask 255.255.255.0 {
+    option routers 172.16.200.1;
     range 172.16.200.100 172.16.200.199;
   }
 }
 
 # Static IP allocations
-group {
+#group {
 #host apex {
 #   option host-name "apex.example.com";
 #   hardware ethernet 00:A0:78:8E:9E:AA;
 #   fixed-address 192.168.1.4;
 #}
-}
+#}
