--- a/LabEnvironment/ansible/roles/pxe-server/tasks/main.yml
+++ b/LabEnvironment/ansible/roles/pxe-server/tasks/main.yml
@@ -12,8 +12,12 @@
     service: tftp
     permanent: yes
     immediate: yes
-    zone: lab-internal
+    zone: "{{ item }}"
     state: enabled
+  with_items:
+    - lab-internal
+    - lab-dmz
+    - lab-public
   notify: reload firewalld
 
 - name: Configure the pxelinux.cfg dir
