--- a/LabEnvironment/ansible/roles/router/files/etc/squid/squid.conf
+++ b/LabEnvironment/ansible/roles/router/files/etc/squid/squid.conf
@@ -37,7 +37,7 @@ http_access allow localhost
 http_access deny all
 
 # Squid normally listens to port 3128
-# http_port 3128
+http_port 3128
 
 # Uncomment and adjust the following to add a disk cache directory.
 #cache_dir ufs /var/spool/squid 100 16 256
@@ -60,7 +60,7 @@ refresh_pattern .		0	20%	4320
 # 'defaultsite' sets the hostname that will be used if none is provided
 # 'vhost' tells squid that it'll use name-based virtual hosting. I'm not
 #   sure if this is actually needed.
-http_port 3128 accel defaultsite=mirror.lab.example.com vhost
+http_port 80 accel defaultsite=mirror.lab.example.com vhost
 
 # Create a disk-based cache of up to 8GB in size:
 cache_dir ufs /var/spool/squid 8000 16 256
