--- a/LabEnvironment/ansible/roles/router/handlers/main.yml
+++ b/LabEnvironment/ansible/roles/router/handlers/main.yml
@@ -22,6 +22,9 @@
 - name: reload firewalld
   command: firewall-cmd --reload
 
+- name: reload sysctl
+  command: sysctl -p
+
 - name: restart squid
   service:
     name: squid
