--- a/LabEnvironment/ansible/roles/router/tasks/time.yml
+++ b/LabEnvironment/ansible/roles/router/tasks/time.yml
@@ -4,8 +4,12 @@
     service: ntp
     permanent: yes
     immediate: yes
-    zone: lab-internal
+    zone: "{{ item }}"
     state: enabled
+  with_items:
+    - lab-internal
+    - lab-dmz
+    - lab-public
   notify: reload firewalld
 
 - name: Let chrony server others
