--- a/LabEnvironment/ansible/router.yml
+++ b/LabEnvironment/ansible/router.yml
@@ -6,11 +6,15 @@
     - hostname:
         name: router.lab.example.com
     - import_role:
+        name: base-server
+    - import_role:
         name: router
     - import_role:
         name: dns-server
     - import_role:
         name: dhcp-server
+    - import_role:
+        name: mail-server
     - import_role:
         name: ftp-server
     - import_role:
