--- a/LabEnvironment/ansible/roles/dhcp-server/tasks/main.yml
+++ b/LabEnvironment/ansible/roles/dhcp-server/tasks/main.yml
@@ -18,8 +18,12 @@
     service: dhcp
     permanent: yes
     immediate: yes
-    zone: lab-internal
+    zone: "{{ item }}"
     state: enabled
+  with_items:
+    - lab-internal
+    - lab-dmz
+    - lab-public
   notify: reload firewalld
 
 - name: Start and enable the dhcp service
