--- a/LabEnvironment/ansible/roles/router/tasks/main.yml
+++ b/LabEnvironment/ansible/roles/router/tasks/main.yml
@@ -4,3 +4,14 @@
 - import_tasks: time.yml
 - import_tasks: squid.yml
 
+# Configure routing
+
+- name: Setup sysctl
+  lineinfile:
+    dest: /etc/sysctl.d/99-sysctl.conf
+    regexp: '^net.ipv4.ip_forward'
+    line: 'net.ipv4.ip_forward = 1'
+  notify: reload sysctl
+
+    
+    
